--- a/css/styles.css
+++ b/css/styles.css
@@ -8,3 +8,106 @@ html {
     padding: 0;
     box-sizing: inherit;
 }
+body {
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100%;
+    opacity: 0.8;
+}
+.jumbotron {
+    margin: 0;
+    padding: 30px;
+    background-image: linear-gradient(to right, #A0C3D2, #F7F5EB, #EAC7C7);
+    color: rgb(49, 45, 45); 
+}
+
+h1, h3, h4, p {
+    font-family: 'Crimson Text', serif;
+}
+
+.navbar {
+    background-color: #EAE0DA; 
+    font-family: 'Crimson Text', serif;
+    font-size: larger;
+}
+
+.carousel {
+    margin: 20px;
+    border: solid #848485;
+    -moz-box-shadow: 5px 5px 7px #212121;
+    -webkit-box-shadow: 5px 5px 7px rgba(33, 33, 33, 0.7);
+    box-shadow: 5px 5px 7px rgba(33, 33, 33, 0.7);
+}
+
+
+ul.notes li {
+  margin: 30px 40px 50px 0px;
+  float: left;
+}
+
+ul.notes li, ul.tag-list li {
+  list-style: none;
+}
+
+ul.notes li div small {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  font-size: 10px;
+}
+
+div.rotate-1 {
+  -webkit-transform: rotate(-6deg);
+  -o-transform: rotate(-6deg);
+  -moz-transform: rotate(-6deg);
+}
+
+div.rotate-2 {
+  -o-transform: rotate(4deg);
+  -webkit-transform: rotate(4deg);
+  -moz-transform: rotate(4deg);
+  position: relative;
+  top: 5px;
+}
+
+.pink-bg {
+    background-color: #EAC7C7;
+  }
+
+.lazur-bg {
+  background-color: #A0C3D2;
+}
+
+
+
+ul.notes li div {
+  text-decoration: none;
+  color: #000;
+  display: block;
+  height: 250px;
+  width: 210px;
+  padding: 1em;
+  -moz-box-shadow: 5px 5px 7px #212121;
+  -webkit-box-shadow: 5px 5px 7px rgba(33, 33, 33, 0.7);
+  box-shadow: 5px 5px 7px rgba(33, 33, 33, 0.7);
+  -moz-transition: -moz-transform 0.15s linear;
+  -o-transition: -o-transform 0.15s linear;
+  -webkit-transition: -webkit-transform 0.15s linear;
+}
+
+.site-footer {
+  
+    background-image: linear-gradient(#EAE0DA, #F7F5EB);
+    padding: 20px 0; 
+    font-family: 'Crimson Text', serif;  
+}
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
+#profilePic {
+    -moz-box-shadow: 5px 5px 7px #212121;
+    -webkit-box-shadow: 5px 5px 7px rgba(33, 33, 33, 0.7);
+    box-shadow: 5px 5px 7px rgba(33, 33, 33, 0.7);
+}
